# idr

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
idr/: idr.py  inv_cdf.c  inv_cdf.pyx  test_inv_cdf.py
tests/: test_inv_cdf.py
